wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -261,38 +261,38 @@ export const HeroSectionWithTheme = styled("div")(
 
 ## Form Builder
 
-### Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
+### ✍️ Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
 
-✍️
+TODO
 
 [//]: # (E-mail - Submission Notification)
 
 [//]: # (E-mail - Thank You E-mail)
 
-### Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
+### ✍️ Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
 
-✍️
+TODO
 
-### Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
+### ✍️ Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
 
-✍️
+TODO
 
 
-### Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
+### ✍️ Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
 
-✍️
+TODO
 
-### Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
+### ✍️ Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
 
-✍️
+TODO
 
-### Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
+### ✍️ Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
 
-✍️
+TODO
 
-### Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
+### ✍️ Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
 
-✍️
+TODO
 
 ## Cloud Infrastructure
 
@@ -387,4 +387,6 @@ Except for the prerendering-related utility functions, these can be used within 
 
 ## Documentation
 
-### Updated Page Builder and Form Builder Theming Articles
+### ✍️ Updated Page Builder and Form Builder Theming Articles
+
+TODO
