wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -23,10 +23,7 @@ import pagePreviewLinkInRevisionsList from "./assets/page-preview-link-in-revisi
 import editBlockButtonEditor from "./assets/edit-block-button-editor.png";
 import refreshBlockButtonEditor from "./assets/refresh-block-button-editor.png";
 import blockNameInEditor from "./assets/block-name-in-editor.png";
-import pagePreviewLInkInRevisionsList from "./assets/page-preview-link-in-revisions-list.png";
 import pbEditorRefreshBlocks from "./assets/pb-editor-refresh-blocks.png";
-
-
 
 ## Headless CMS
 
@@ -160,9 +157,7 @@ Previously, the title specified via the General settings would be used instead, 
   
 </Alert>
 
-### Improved Grid and Cell Page Elements https://github.com/webiny/webiny-js/pull/3012
-
-✍️
+### Improved Grid and Cell Page Elements ([#3012](https://github.com/webiny/webiny-js/pull/3012))
 
 Grid page element now provides users with a couple of new features in page element settings.
 
