wip: document changes

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -25,6 +25,11 @@ import refreshBlockButtonEditor from "./assets/refresh-block-button-editor.png";
 import blockNameInEditor from "./assets/block-name-in-editor.png";
 import pbEditorRefreshBlocks from "./assets/pb-editor-refresh-blocks.png";
 
+import gridMultipleRows from "./assets/grid-multiple-rows.png";
+import gridCellGaps from "./assets/grid-cell-gaps.png";
+import gridCellsExpandHeight from "./assets/grid-cells-expand-height.png";
+import gridVerticalCentering from "./assets/grid-vertical-centering.png";
+
 ## Headless CMS
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
@@ -102,7 +107,6 @@ In the page editor, once a block has been selected on the page canvas, in the ri
 
 <Image src={editBlockButtonEditor} title={"Edit Block Button"} />
 
-
 ##### **Refresh Block Button**
 
 With the **Edit** button, we've also introduced the **Refresh** button. As the name suggests, once clicked, the selected block will be refreshed, reflecting changes that may have been done to the block by the user potentially in a separate browser tab, or by other user. 
@@ -163,9 +167,19 @@ Grid page element now provides users with a couple of new features in page eleme
 
 For starters, users can now choose the number of rows for the grid, enabling them to quickly have multiple rows of columns, and not just one.
 
-Also, users can now easily have child cells' heights expand and take the full height of the parent grid via the new Grid height setting 
+<Image src={gridMultipleRows} title={"Grids With Multiple Rows"} />
 
-Finally, vertical centering.
+And with the new **Column gap** and **Row gap** settings, users can add spacing between grids and cells:
+
+<Image src={gridCellGaps} title={"Column and Row gap settings"} />
+
+Furthermore, grid cells can now be vertically expanded and take the full height of the parent grid via the new **Column height** setting. 
+
+<Image src={gridCellsExpandHeight} title={"Grid Cells Vertically Expanded"} />
+
+Finally, users can now apply vertical centering of content placed in grid cells.
+
+<Image src={gridVerticalCentering} title={"Vertical Centering Grid Cells Vertically Expanded"} />
 
 ### Theme Object Now Available In Emotion Styled Components ([#3141](https://github.com/webiny/webiny-js/pull/3141))
 
