Added the command to update the unstable release

--- a/src/docs/shared/release-management/unstable-releases.mdx
+++ b/src/docs/shared/release-management/unstable-releases.mdx
@@ -33,3 +33,11 @@ npx create-webiny-project@unstable my-new-project --tag=unstable
 ```
 
 From this point on, the process is identical to our [regular project setup](/docs/{version}/get-started/install-webiny#pick-your-database).
+
+## Updating to the latest unstable release 
+
+If you already have an unstable project, you can update it to the latest unstable release by running the following command:
+
+```bash
+yarn up "@webiny/*@unstable"
+```
