Form Builder change log

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -30,6 +30,17 @@ import gridCellGaps from "./assets/grid-cell-gaps.png";
 import gridCellsExpandHeight from "./assets/grid-cells-expand-height.png";
 import gridVerticalCentering from "./assets/grid-vertical-centering.png";
 
+import fbEmailTrigger1 from './assets/fb-email-trigger-1.png';
+import fbEmailTrigger2 from './assets/fb-email-trigger-2.png';
+import fbImportExport from './assets/fb-import-export.png';
+import fbCopySubmission from './assets/fb-copy-submission.png';
+import fbOtherOption1 from './assets/fb-other-option-1.png';
+import fbOtherOption2 from './assets/fb-other-option-2.png';
+import fbRequiredToggle from './assets/fb-required-toggle.png';
+import fbRequiredIndicator from './assets/fb-required-indicator.png';
+import fbHelpText from './assets/fb-help-text.png';
+import fbFieldIdValidator from './assets/fb-field-id-validator.png';
+
 ## Headless CMS
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
@@ -270,38 +281,63 @@ export const HeroSectionWithTheme = styled("div")(
 
 ## Form Builder
 
-### ✍️ Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
+### Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
 
-TODO
+<Image src={fbEmailTrigger1} title={"E-mail - Submission Notification"} />
 
-[//]: # (E-mail - Submission Notification)
+<Image src={fbEmailTrigger2} title={"E-mail - Thank You E-mail"} />
 
-[//]: # (E-mail - Thank You E-mail)
+Under the Form Builder triggers you'll now find two new options. The "E-mail - Submission Notification" trigger sends an email every time a form submission is received. This way it's much easier to stay updated when someone submits one of your forms. 
 
-### ✍️ Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
+The "E-mail - Thank You E-mail" trigger sends an email to the user who submitted the form. Inside the email content, you can use the `{fields.FIELD_NAME}` variable to display the form submission data, adding personalization to your emails. 
 
-TODO
+### Added the Ability to Import/export Forms ([#3077](https://github.com/webiny/webiny-js/pull/3077))
 
-### ✍️ Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
+<Image src={fbImportExport} title={"Form Builder - Export form"} />
 
-TODO
+We've added the ability to export selected forms from the system and easily import them into another system. This way, you can easily move your forms from one environment to another.
 
 
-### ✍️ Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
+### Improved Export Of Submissions  ([#3093](https://github.com/webiny/webiny-js/pull/3093) [#2965](https://github.com/webiny/webiny-js/pull/2965))
 
-TODO
+We made several updates to the way form submissions are exported. Firstly, the exported CSV file will now contain the exact date and time (UTC) when the submission was created. Secondly, the export format has been improved to make it easier to read. Fields like the checkbox and radio button that previously contained the field value instead of the label, making it hard to read, have been fixed. 
 
-### ✍️ Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
 
-TODO
 
-### ✍️ Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
+### Introduced Copy Form Submission to Clipboard ([#2952](https://github.com/webiny/webiny-js/pull/2952))
 
-TODO
+<Image src={fbCopySubmission} title={"Form Builder - Copy submission"} />
 
-### ✍️ Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
+When you preview the submission details in the modal dialog you'll notice two new buttons in the top right corner. The "Copy as JSON" and "Copy as CSV" buttons will copy the submission data to your clipboard, so you can easily paste it into another application.
 
-TODO
+### Ability to Have "Other" Option ([#3031](https://github.com/webiny/webiny-js/pull/3031))
+
+<Image src={fbOtherOption1} title={"Form Builder - Other settings"} />
+<Image src={fbOtherOption2} title={"Form Builder - Other preview"} />
+
+We've added the ability to have an "Other" option in the radio button and checkbox fields. This way, you can easily allow users to add a custom value to the field.
+
+### Multiple Improvements on the Default Form Layout ([#3009](https://github.com/webiny/webiny-js/pull/3009) [#2950](https://github.com/webiny/webiny-js/pull/2950) [#2964](https://github.com/webiny/webiny-js/pull/2964))
+
+We've made several improvements to the default form layout. The most notable ones are:
+
+<Image src={fbRequiredToggle} title={"Form Builder - Required toggle"} />
+
+You can now view and toggle the required indicator on and off directly from the form layout editor. 
+
+<Image src={fbRequiredIndicator} title={"Form Builder - Required indicator"} />
+
+Previously the required fields didn't have any indicator on them to show that they are required. We've added a red asterisk to the field label to make it clear that the field is required.
+
+<Image src={fbHelpText} title={"Form Builder - Help text"} />
+
+The position of the field help text has now been moved under the title to make it easier to read.
+
+### Added Basic Form Field ID Validation ([#3017](https://github.com/webiny/webiny-js/pull/3017))
+
+<Image src={fbFieldIdValidator} title={"Form Builder - Field ID Validator"} />
+
+We've added a basic validation to the form field ID. Previously, you could enter any value as the field ID, which could cause different issues in the system. Now, you can only enter letters, numbers, and underscores.
 
 ## Cloud Infrastructure
 
