--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -78,6 +78,32 @@ We added the ability create a new model with the default fields defined. Default
 By the default, the checkbox defining the default fields creation is checked, but users can uncheck it if they do not want to create the default fields.
 <Image src={modelWithDefaultFields} title={"Model With Default Fields Checkbox"} />
 
+### Model Icon ([#3142](https://github.com/webiny/webiny-js/pull/3142))
+
+Users can now choose an icon to represent their model in the UI.
+
+### Disable Dynamic Zone in the Object Field ([#3160](https://github.com/webiny/webiny-js/pull/3160))
+
+We disabled the possibility to add the Dynamic Zone Field into the Object field. Unfortunately we need to do this, for the moment, as we need to implement structural changes in the Headless CMS for this to properly work.
+
+### GraphQL Schema Cache ([#3201](https://github.com/webiny/webiny-js/pull/3201))
+When the user project did not contain any models in the database (created via the UI), GraphQL Schema cache did not work properly as the generated cache key was faulty.
+Now we generate a correct key, which is used to cache the GraphQL Schema until the next model change or next deployment of the code.
+
+### Code Content Model Without Validation ([#3187](https://github.com/webiny/webiny-js/pull/3187))
+The projects, which have a lot of the CMS Models created via the code, can get a slow API response due to the validation ran on every request.
+This PR introduces `noValidate` property on the [CmsModelPlugin](https://github.com/webiny/webiny-js/blob/3f51fbbbe103a6363d60ad9f591111aa70ae7377/packages/api-headless-cms/src/plugins/CmsModelPlugin.ts#L51), for both the API and Private models.
+
+When using the `noValidate` flag, users will must be extremely careful as we do not check anything they set in that code model.
+
+### Benchmark Measurement Points ([#3185](https://github.com/webiny/webiny-js/pull/3185))
+
+After adding the [Benchmark](#api-benchmark-3183) tool to our system, we added some benchmark points to the Headless CMS.
+
+This allows us, and our users, to figure out where is the bottleneck during the request, if there is one.
+Benchmark measurement points cover the GraphQL Schema generation and processing of the request body, at the top level.
+The measurements cover all our CMS GraphQL Queries and Mutations as well, as a part of processing the request body step.
+
 ## Page Builder
 
 ### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
@@ -279,6 +305,13 @@ export const HeroSectionWithTheme = styled("div")(
 
 </Alert>
 
+
+### Input Validation With Zod Library ([#3167](https://github.com/webiny/webiny-js/pull/3167)) ([#3194](https://github.com/webiny/webiny-js/pull/3194))
+We replaced the Commodo validation (our custom package) with the Zod [library](https://github.com/colinhacks/zod). The validation is now a lot more strict and this is a preparation for the ability for users to customize the validation - not available yet.
+
+### Title and Path Maximum Length ([#3188](https://github.com/webiny/webiny-js/pull/3188))
+The Page Builder `title` and `path` properties are now set to be maximum of 500 characters.
+
 ## Form Builder
 
 ### Introduced E-Mail Triggers ([#2957](https://github.com/webiny/webiny-js/pull/2957))
@@ -429,6 +462,38 @@ isPrerendering() // true
 ```
 
 Except for the prerendering-related utility functions, these can be used within both Admin and Website applications.
+
+
+### API Benchmark ([#3183](https://github.com/webiny/webiny-js/pull/3183))
+
+We added the benchmark tool to the main `context` object. It is initialized by default, but it is not enabled.
+
+To find out more about our benchmark tool and how to enable it in your project, please read this [article] TODO.
+
+### Security `withoutAuthorization` Method ([#3176](https://github.com/webiny/webiny-js/pull/3176))
+
+There is now a `withoutAuthorization` method on the `context.security` object. It is intended to replace the `context.security.disableAuthorization()` and `context.security.enableAuthorization()` methods.
+
+The problem with the enable authorization method is that they enable the authorization without any checks. At some points authorization should not be enabled as it was disabled by the user a few levels up from the current code.
+
+The `withoutAuthorization` works in the way that it does disable the authorization, but does not enable it - if it was not already enabled when the disable part kicked in.
+
+This way users can nest the `context.security.withoutAuthorization()` calls without fear of authorization being enabled in the middle of the code execution.
+
+### Error Logs ([#3122](https://github.com/webiny/webiny-js/pull/3122))
+
+We now log errors via the `console.error` method, so they are properly marked in the Cloudwatch.
+
+```typescript
+const result = await context.security.withoutAuthorization(async() => {
+    const params = {
+        myParam: 1,
+        anotherParam: 2
+    }
+    return userCustomCodeCallWhichNeedsToHaveAuthorizationDisabled(params);
+});
+```
+
 
 ## Documentation
 
