docs: fixed broken CloudFront URL link

--- a/src/docs/shared/release-notes/5.29.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.29.0/changelog.mdx
@@ -143,7 +143,7 @@ Learn more about project applications and project organization in general, in th
 
 With this release, we are introducing the new [Core](https://github.com/webiny/webiny-js/tree/v5/apps/core) project application, whose main purpose is to define and encapsulate the stateful cloud infrastructure resources. These are your [Amazon DynamoDB](https://docs.aws.amazon.com/amazondynamodb/latest/developerguide/Introduction.html) and [Amazon Elasticsearch](https://aws.amazon.com/opensearch-service/) databases, [Amazon S3](https://aws.amazon.com/s3/) for storing files, [Amazon Cognito](https://aws.amazon.com/cognito/) for user information, and also [Amazon EventBridge](https://aws.amazon.com/eventbridge/) which we've introduced with this release, to manage events via event buses.
 
-The [API project application](/docs/{version}/architecture/api/overview) still exists, but, from now on, it strictly defines the stateless resources responsible for hosting your project's GraphQL APIs. These include [Amazon API Gateway](https://aws.amazon.com/api-gateway/), [Amazon Cloudfront](Front/latest/DeveloperGuide/Introduction.html), and multiple [AWS Lambda](https://aws.amazon.com/lambda/) functions.
+The [API project application](/docs/{version}/architecture/api/overview) still exists, but, from now on, it strictly defines the stateless resources responsible for hosting your project's GraphQL APIs. These include [Amazon API Gateway](https://aws.amazon.com/api-gateway/), [Amazon Cloudfront](https://aws.amazon.com/cloudfront/), and multiple [AWS Lambda](https://aws.amazon.com/lambda/) functions.
 
 This new organization will enable us to create some really interesting features in the near future, so stay tuned for that!
 
