feat: code benchmarking

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -468,7 +468,7 @@ Except for the prerendering-related utility functions, these can be used within 
 
 We added the benchmark tool to the main `context` object. It is initialized by default, but it is not enabled.
 
-To find out more about our benchmark tool and how to enable it in your project, please read this [article] TODO.
+To find out more about our benchmark tool and how to enable it in your project, please read this [article](/docs/performance-and-load-benchmark/code).
 
 ### Security `withoutAuthorization` Method ([#3176](https://github.com/webiny/webiny-js/pull/3176))
 
@@ -480,10 +480,6 @@ The `withoutAuthorization` works in the way that it does disable the authorizati
 
 This way users can nest the `context.security.withoutAuthorization()` calls without fear of authorization being enabled in the middle of the code execution.
 
-### Error Logs ([#3122](https://github.com/webiny/webiny-js/pull/3122))
-
-We now log errors via the `console.error` method, so they are properly marked in the Cloudwatch.
-
 ```typescript
 const result = await context.security.withoutAuthorization(async() => {
     const params = {
@@ -493,6 +489,10 @@ const result = await context.security.withoutAuthorization(async() => {
     return userCustomCodeCallWhichNeedsToHaveAuthorizationDisabled(params);
 });
 ```
+
+### Error Logs ([#3122](https://github.com/webiny/webiny-js/pull/3122))
+
+We now log errors via the `console.error` method, so they are properly marked in the Cloudwatch.
 
 
 ## Documentation
