refactor: benchmark output

--- a/src/docs/shared/performance-and-load-benchmark/code.mdx
+++ b/src/docs/shared/performance-and-load-benchmark/code.mdx
@@ -9,6 +9,7 @@ import {Alert} from "@/components/Alert";
 
 - what is the code benchmark
 - how to enable the code benchmark
+- how to output the code benchmark measurements
 
 </Alert>
 
@@ -129,7 +130,6 @@ You can customize the output of the measurement logs, for example: send them to 
 
 ```typescript
 import {ContextPlugin} from "@webiny/handler-aws";
-
 
 const plugin = new ContextPlugin(async(context) => {
     context.benchmark.onOutput(async({benchmark, stop}) => {
