feat: graphql cms identity type

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -46,7 +46,7 @@ import fbFieldIdValidator from './assets/fb-field-id-validator.png';
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
 
 We added the ability to define the singular and plural model API names for the Headless CMS models.
-Before the version 5.35.0, the API name was always created from the `modelId` property and for the plural, we used [pluralize](https://www.npmjs.com/package/pluralize) library, which did not create correct plural names languages other than the English.
+Before the version `5.35.0`, the API name was always created from the `modelId` property and for the plural, we used [pluralize](https://www.npmjs.com/package/pluralize) library, which did not create correct plural names for languages other than the English.
 
 The models created via the Admin UI will always need to have singular and plural API name defined, but the models created via the code will have the singular and plural API name only if they are set as not private.
 
@@ -55,7 +55,7 @@ The models created via the Admin UI will always need to have singular and plural
 For the singular and plural model API name functionality, we added a migration which will run after the first deploy.
 The migration updates all the models in all the tenants and locales.
 
-Because the handler code is deployed before the migration is executed, existing models do not have the `singularApiName` and `pluralApiName` properties defined, and for that case we have a fallback in the code - so your API does not fail until the migration is executed.
+Because the handler code is deployed before the migration is executed, existing models do not have the `singularApiName` and `pluralApiName` properties defined, and for that case we have a fallback in the code - so your API does not fail until the migration is executed. The code models should be updated by the users before the deployment.
 
 ### Detailed (Advanced) Admin UI Reference Field ([#2969](https://github.com/webiny/webiny-js/pull/2969))
 
@@ -80,11 +80,19 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ### Model Icon ([#3142](https://github.com/webiny/webiny-js/pull/3142))
 
-Users can now choose an icon to represent their model in the UI.
+We added the possibility to add an icon when creating or editing a model. In the Admin UI there is an icon picker when creating or editing a model.
+For the code models, users will need to type in the icon pack identifier and the icon identifier, in form of `packId/iconId`. For example, a newspaper icon is `fas/newspaper`.
+
+We have a few icon packs by default: `@fortawesome/free-brands-svg-icons` (`fab`), `@fortawesome/free-solid-svg-icons` (`fas`) and `@fortawesome/free-regular-svg-icons` (`far`).
+
 
 ### Disable Dynamic Zone in the Object Field ([#3160](https://github.com/webiny/webiny-js/pull/3160))
 
 We disabled the possibility to add the Dynamic Zone Field into the Object field. Unfortunately we need to do this, for the moment, as we need to implement structural changes in the Headless CMS for this to properly work.
+
+### GraphQL Schema Types `CmsCreatedBy` and `CmsOwnedBy` Replaced With `CmsIdentity` ([#2969](https://github.com/webiny/webiny-js/pull/2969))
+
+As part of the detailed reference field PR we removed the GraphQL types `CmsCreatedBy` and `CmsOwnedBy` in favor of the `CmsIdentity` type, because they represented the same data.
 
 ### GraphQL Schema Cache ([#3201](https://github.com/webiny/webiny-js/pull/3201))
 When the user project did not contain any models in the database (created via the UI), GraphQL Schema cache did not work properly as the generated cache key was faulty.
