feat: Add "Pages as Modal Content" example

--- a/src/docs/5.34.x/page-builder/extending/create-a-page-element.mdx
+++ b/src/docs/5.34.x/page-builder/extending/create-a-page-element.mdx
@@ -436,4 +436,5 @@ On the other hand, custom page elements also add additional flexibility by allow
 
 ## Additional Examples
 
-- [Cards Page Element Example](https://github.com/webiny/webiny-examples/tree/master/page-builder/cards-page-element)
+- [Cards Page Element](https://github.com/webiny/webiny-examples/tree/master/page-builder/cards-page-element)
+- [Pages as Modal Content](https://github.com/webiny/webiny-examples/tree/master/page-builder/pages-as-modals)
