wip: add three items

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -24,6 +24,8 @@ import editBlockButtonEditor from "./assets/edit-block-button-editor.png";
 import refreshBlockButtonEditor from "./assets/refresh-block-button-editor.png";
 import blockNameInEditor from "./assets/block-name-in-editor.png";
 import pbEditorRefreshBlocks from "./assets/pb-editor-refresh-blocks.png";
+import missingTenantErrorMessage from "./assets/missing-tenant-err-message.png";
+import editorCanvasWidth from "./assets/editor-canvas-width.png";
 
 import gridMultipleRows from "./assets/grid-multiple-rows.png";
 import gridCellGaps from "./assets/grid-cell-gaps.png";
@@ -80,7 +82,7 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ## Page Builder
 
-### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
+### ✍️ Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
 
 ✍️
 
@@ -278,6 +280,32 @@ export const HeroSectionWithTheme = styled("div")(
   More information on this can be found in the new [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article.
 
 </Alert>
+
+### Website - Clicking on Links No Longer Does A Full Page Refresh ([#3215](https://github.com/webiny/webiny-js/pull/3215))
+
+Prior to this release, clicking on links rendered by **Pages List**, **Button**, and **Image** page elements would cause a full page refresh, making the UX for the website visitor not as good as it should be.
+
+This has now been addressed. Clicking on links rendered by these page elements will cause the following page to be rendered immediately, without a page refresh happening. 
+
+### Website - Added Missing Tenant Error Message ([#3202](https://github.com/webiny/webiny-js/pull/3202))
+
+Prior to this release, if a user would open their website application in local development and their Webiny project had multi-tenancy feature enabled, then they would just see a blank screen in case the tenant ID hasn't been set previously. No errors would be shown in the browser console too.
+
+Additional point of pain would be the fact that setting the tenant ID is also something that was not clear and, in almost all cases, would left users further confused.
+
+To address this, we've added better error reporting and ensured users are aware what are the next steps. The following is the error message that will be shown to users in their browser:
+
+<Image src={missingTenantErrorMessage} title={"Website - Added Missing Tenant Error Message"} />
+
+### Page Editor - Addressed Canvas Width Indicator Issue ([#3216](https://github.com/webiny/webiny-js/pull/3216))
+
+The canvas width indicator displays the width of the canvas, which changes depending on the selected breakpoint (desktop, tablet, mobile-landscape, mobile-portrait). Due to an internal bug, the indicator would always report **100px** as the width, which was incorrect. 
+
+This has now been addressed, so the actual canvas width should now be displayed correctly.
+
+<Image src={editorCanvasWidth} title={"Page Editor - Canvas Width Indicator Now Works Correctly"} />
+
+
 
 ## Form Builder
 
