refactor: move lambda removal warning to top

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -43,7 +43,31 @@ import fbRequiredIndicator from './assets/fb-required-indicator.png';
 import fbHelpText from './assets/fb-help-text.png';
 import fbFieldIdValidator from './assets/fb-field-id-validator.png';
 
+## Cloud Infrastructure
+
+### Removing the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+
+<Alert type="warning">
+
+  In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it is quite simple to fix.
+
+</Alert>
+
+Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
+
+We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
+
+To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
+
 ## Headless CMS
+
+### Headless CMS GraphQL Schema Plugin ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+
+As a part of the **Removing the Headless CMS AWS Lambda Function** task, there is a new GraphQL Schema plugin which is responsible for the Headless CMS GraphQL schema.
+
+If you were using the `GraphQLSchemaPlugin` to define your custom schema for the Headless CMS, please replace it with the `CmsGraphQLSchemaPlugin` (`import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";`).
+
+To learn more about the required changes, after the removal of the Headless CMS Lambda Function, please read the [Removing the Headless CMS Lambda Function](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) article.
 
 ### Singular And Plural Model API Name ([#3111](https://github.com/webiny/webiny-js/pull/3111))
 
@@ -405,22 +429,6 @@ The position of the field help text has now been moved under the title to make i
 <Image src={fbFieldIdValidator} title={"Form Builder - Field ID Validator"} />
 
 We've added a basic validation to the form field ID. Previously, you could enter any value as the field ID, which could cause different issues in the system. Now, you can only enter letters, numbers, and underscores.
-
-## Cloud Infrastructure
-
-### Removing the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
-
-<Alert type="warning">
-
-  In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it is quite simple to fix.
-
-</Alert>
-
-Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
-
-We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
-
-To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
 
 ## Development
 
