--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -4,7 +4,8 @@ title: Removing the Headless CMS AWS Lambda function
 description: Steps to remove the Headless CMS AWS Lambda function from your project.
 ---
 
-import { Alert } from "@/components/Alert";
+
+import {Alert} from "@/components/Alert";
 
 <Alert type={"warning"}>
 
@@ -26,7 +27,7 @@ Before upgrading to 5.35.0 and continuing with this migration guide, please ensu
 
 The main reason behind this change is the simplification of project development and deployment. For example, prior to `5.35.0`, users would have two separate folders in their `apps/api` folder:
 
-1. `apps/api/graphql` - Default GraphQL API 
+1. `apps/api/graphql` - Default GraphQL API
 2. `apps/api/headlessCMS` - Headless CMS GraphQL API
 
 This means that, upon extending the GraphQL APIs via various plugins, in some cases users would need to understand within which folder the plugins would need to be registered.
@@ -52,8 +53,9 @@ If none of the above has been performed within your Webiny project, then you can
 The migration consists of a couple of relatively simple steps: 
 
 1. Move any custom application code and imported plugins from the `apps/api/headlessCMS/src/index.ts` to `apps/api/graphql/src/index.ts`.
-2. Move any custom code application and imported plugins from the `apps/api/headlessCMS/src/index.ts` to `apps/api/graphql/src/security.ts`.
-3. If you are using the import `import { ApiHeadlessCMS } from "@webiny/pulumi-aws"` in the `apps/api/webiny.application.ts`, point it to the `import { ApiGraphql } from "@webiny/pulumi-aws"`, and change the code accordingly,
+2. Move any custom code application and imported plugins from the `apps/api/headlessCMS/src/security.ts` to `apps/api/graphql/src/security.ts`.
+3. If you added any GraphQL Schema plugins, which are concerning the Headless CMS API customizations, use the `CmsGraphQLSchemaPlugin` (`import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";`) class instead of the `GraphQLSchemaPlugin` class or interface, depending on which one you used to define the custom GraphQL Schema.
+4. If you are using the import `import { ApiHeadlessCMS } from "@webiny/pulumi-aws"` in the `apps/api/webiny.application.ts`, point it to the `import { ApiGraphql } from "@webiny/pulumi-aws"`, and change the code accordingly,
 
 ## Cleanup
 
