feat: warning at the top of the upgrade guide

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -5,6 +5,12 @@ description: Learn how to upgrade Webiny from 5.34.x to 5.35.0.
 
 import { Alert } from "@/components/Alert";
 
+<Alert type={"danger"}>
+
+  Before upgrading to `5.35.0`, please ensure your Webiny project is using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](/docs/release-notes/5.29.0/project-setup-migration).
+
+</Alert>
+
 <Alert type="success" title="What you’ll learn">
 
 - how to upgrade Webiny from 5.34.x to 5.35.0
