feat: file manager tags

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -532,6 +532,39 @@ const result = await context.security.withoutAuthorization(async() => {
 });
 ```
 
+## File Manager
+
+### Listing File Tags ([#3227](https://github.com/webiny/webiny-js/pull/3227))
+
+There was a bug when listing The File Tags in the DynamoDB + Elasticsearch deployments - not all tags were listed.
+
+Also, we have upgraded the File Manager `listTags` GraphQL query to return the `tag` value and the `count` value, which represents the number of files that have the tag assigned.
+
+The query now looks like this:
+```graphql
+query ListTags {
+    fileManager {
+        listTags {
+            data {
+                tag
+                count
+            }
+            error {
+                code
+                message
+                data
+            }
+        }
+    }
+}
+```
+
+<Alert type="warning">
+
+  If you are using the `listTags` query directly, you will need to update your code to use the new `tag` and `count` fields.
+
+</Alert>
+
 ## Documentation
 
 ### ✍️ Updated Page Builder and Form Builder Theming Articles
