feat: add page builder aco paragraph

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -19,6 +19,7 @@ import pbEditorBordersVisible from "./assets/pb-editor-borders-visible.png";
 import trailingSlashPbPageSettings from "./assets/trailing-slash-pb-page-settings.png";
 import pbSettingsPagePathSeo from "./assets/pb-settings-page-path-seo.png";
 import pagePreviewLinkInRevisionsList from "./assets/page-preview-link-in-revisions-list.png";
+import pbAcoOverview from "./assets/pb-aco-overview.png";
 
 import editBlockButtonEditor from "./assets/edit-block-button-editor.png";
 import refreshBlockButtonEditor from "./assets/refresh-block-button-editor.png";
@@ -142,7 +143,18 @@ The measurements cover all our CMS GraphQL Queries and Mutations as well, as a p
 
 ### ✍️ Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
 
-✍️
+### Introducing Advanced Content Organization for Page Builder
+The Advanced Content Organization (ACO) for Page Builder is a new feature that provides users with the ability to organize content in an effective, easy-to-manage way. The ACO allows users to add pages in separate folders and rearrange content as needed, making it easier to find what they are looking for.
+
+<Image src={pbAcoOverview} title={"Advanced Content Organization for Page Builder Overview"} />
+
+**With the new Page Builder pages list users can:**
+
+1. Create and update a multi-level folder structure.
+2. Sort both folders and pages based on "Name" and "Last Modified Date". This feature makes it easier for users to find specific pages and folders quickly.
+3. Move a page across the hierarchy tree, and it has no impact on the page URL. The two have been decoupled to ensure users have the flexibility they need without having a negative impact on SEO if they decide to restructure their folder/page organization.
+
+In future releases, we are planning to expose public APIs to allow developers to customize the table view, so they can include, modify or remove columns.
 
 ### Multiple UI Improvements
 
