--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -7,7 +7,10 @@ import { Alert } from "@/components/Alert";
 
 <Alert type={"danger"}>
 
-  Before upgrading to `5.35.0`, please ensure your Webiny project is using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](/docs/release-notes/5.29.0/project-setup-migration).
+Before upgrading to `5.35.0`, please ensure your Webiny project is using the [new project
+setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny
+[5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration
+guide](/docs/release-notes/5.29.0/project-setup-migration).
 
 </Alert>
 
@@ -19,11 +22,16 @@ import { Alert } from "@/components/Alert";
 
 <Alert type="info">
 
-Make sure to check out the [5.35.0 changelog](./changelog) to get familiar with the changes introduced in this release.
+Make sure to check out the [5.35.0 changelog](./changelog) to get familiar with the changes introduced in this
+release.
 
 </Alert>
 
-## 1. Upgrade Webiny Packages
+## Step-by-Step Guide
+
+The following steps will guide you through the upgrade process. Please note that this guide assumes you are using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](/docs/release-notes/5.29.0/project-setup-migration).
+
+### 1. Upgrade Webiny Packages
 
 Upgrade all `@webiny/*` packages by running the following command:
 
@@ -33,7 +41,7 @@ yarn up "@webiny/*@5.35.0"
 
 Once the upgrade has finished, running the `yarn webiny --version` command in your terminal should return `5.35.0`.
 
-## 2. Run the Upgrade Command
+### 2. Run the Upgrade Command
 
 The next step is to run the project upgrade:
 
@@ -52,17 +60,18 @@ yarn webiny upgrade
   manually from your npx directory.
 </Alert>
 
-## 3. Upgrade Your Code to the New Lambda Function Setup
+### 3. Upgrade Your Code to the New Lambda Function Setup
 
 <Alert type="danger">
 
-In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it should not take you a long time to fix.
+In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it
+should not take you a long time to fix.
 
 </Alert>
 
 Please read the [Removing the Headless CMS Lambda Function](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) article to learn how to upgrade your code to the new Lambda function setup.
 
-## 4. Deploy Your Project
+### 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
@@ -75,18 +84,214 @@ Once deployed, access your Admin app to finalize the Page Builder upgrade, which
 
 <Alert type="warning">
 
-Make sure you deploy the entire system using the command shown above! You have to deploy all apps before using the system. Partial deploys may cause the upgrade to be applied incorrectly.
+Make sure you deploy the entire system using the command shown above! You have to deploy all apps before using the
+system. Partial deploys may cause the upgrade to be applied incorrectly.
 
 </Alert>
 
 <Alert type="warning">
 
-As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
+As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-first) section, we recommend that you
+first deploy your changes into one of your pre-production environments, like `dev` or `staging`.
 
 </Alert>
 
 <Alert type="info">
 
-Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.
+Learn more about different deployment environments in the [CI/CD /
+Environments](../../core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
+
+## Additional Information
+
+### Emotion 11
+
+With this release, we are [upgrading Emotion library](/docs/release-notes/5.35.0/changelog#emotion-11-3138) to version 11.
+
+Across multiple `package.json` files, the [upgrade command](#2-run-the-upgrade-command) will upgrade versions of all [`@emotion`](https://emotion.sh/docs/emotion-11) packages to version 11. It will also replace all usages of the [`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package with the new [`@emotion/react`](https://www.npmjs.com/package/@emotion/react) ([`@emotion/core`](https://www.npmjs.com/package/@emotion/core) package is now deprecated).
+
+#### Custom Babel Plugins For Emotion
+
+Note that if you've been using custom Babel plugins for Emotion, you will need to update them to the latest version as well. 
+
+These are usually introduced via `webiny.config.ts` files. For example, if you had something like the following in either your `apps/admin/webiny.config.ts` or `apps/website/webiny.config.ts` files:
+
+```ts apps/admin/webiny.config.ts or apps/website/webiny.config.ts
+import { createWebsiteAppConfig } from "@webiny/serverless-cms-aws";
+
+export default createWebsiteAppConfig(({ config }) => {
+    config.babel(babelConfig => {
+        return {
+            ...babelConfig,
+            plugins: [...babelConfig.plugins, ["babel-plugin-emotion", { autoLabel: true }]]
+        };
+    });
+});
+```
+
+You will need to adjust it to the following:
+
+```diff-ts apps/admin/webiny.config.ts or apps/website/webiny.config.ts
+import { createWebsiteAppConfig } from "@webiny/serverless-cms-aws";
+
+export default createWebsiteAppConfig(({ config }) => {
+    config.babel(babelConfig => {
+        return {
+            ...babelConfig,
+-           plugins: [...babelConfig.plugins, ["babel-plugin-emotion", { autoLabel: true }]]
++           plugins: [...babelConfig.plugins, ["@emotion", { autoLabel: "always"}]]
+
+        };
+    });
+});
+```
+ 
+In case of the above, note that the options for the [`@emotion/babel-plugin`](https://www.npmjs.com/package/@emotion/babel-plugin) are different from the ones for the [`babel-plugin-emotion`](https://www.npmjs.com/package/babel-plugin-emotion) plugin. You can find more information about the new plugin [here](https://emotion.sh/docs/emotion-11#babel-preset-and-babel-plugin).
+
+<Alert type={"info"}>
+
+  The [upgrade command](#2-run-the-upgrade-command) will try to detect usage of custom Babel plugins for Emotion. If detected, it will print the following message in terminal: **Warning: Found custom Emotion plugins in your project. Please make sure to update them to the latest version.**
+
+</Alert>
+
+### Theming-related Updates
+
+The upgrade command will perform a couple of code level updates related to theming. The following sections will explain what changes are made, and how you can manually apply them if the upgrade command fails to do so.
+
+#### Updated Theme Object Structure
+
+With this release, we are [updating the structure of the theme object](/docs/release-notes/5.35.0/changelog#updated-theme-object-structure-3138).
+
+<br/>
+<br/>
+
+##### **1. `styles.typography` Object**
+
+The first change is related to the `styles.typography` object, which was previously an object where keys represented the typography variant (heading1, heading2, etc.), and values were objects representing the actual typography styles. For example:
+
+```ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+      heading1: {
+        // ...
+      },
+      heading2: {
+        // ...
+      },
+      // ...
+    }
+  }
+}
+```
+
+From now on, the `styles.typography` object is an object where keys represent the typography type (heading, paragraph, etc.), and values are arrays of objects, where each object represents a specific typography variant. Each typography variant is an object that consists of four properties: `id`, `name`, `tag`, and `styles`.
+
+For example:
+
+```ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+      heading: [
+        {
+          id: "heading1",
+          name: "Heading 1",
+          tag: "h1",
+          styles: {
+            // ...
+          }
+        },
+        {
+          id: "heading2",
+          name: "Heading 2",
+          tag: "h2",
+          styles: {
+            // ...
+          }
+        },
+        // ...
+      ],
+      paragraph: [
+        {
+          id: "paragraph1",
+          name: "Paragraph 1",
+          tag: "p",
+          styles: {
+            // ...
+          }
+        },
+        {
+          id: "paragraph2",
+          name: "Paragraph 2",
+          tag: "p",
+          styles: {
+            // ...
+          }
+        },
+        // ...
+      ],
+      // ...
+    }
+  }
+}
+```
+
+##### **2. Accessing Typography Styles**
+
+The second change is the way typography is accessed. Previously, you could access typography styles via the `styles.typography` object, and then by using the typography variant as a key, for example `theme.styles.typography.heading1`.
+
+Since the structure of the `styles.typography` object has changed, you will need to access typography styles via the `styles.typography` object, and then by using the typography type as a key, and finally by using the typography variant as a key, for example 
+
+```ts
+theme.styles.typography["headings"][0]
+```
+
+But, since this is a bit cumbersome, we've introduced a new utility function called `stylesById` that will make it easier to access typography styles. For example, if you want to access the `heading1` typography variant, you can do so by using the following:
+
+```ts
+theme.styles.typography["headings"].stylesById["heading1"]
+```
+
+
+
+
+The upgrade command will automatically update the `styles.typography` object in your `theme/theme.ts` file. But 
+if for some reason it fails to do so, you can manually update usage of the `styles.typography` object in your project.
+
+
+#### Theme Object Accessed Via Context Object
+
+Prior to version 5.35.0, upon creating styled React components, if required, the [`theme`](https://github.com/webiny/webiny-js/blob/next/apps/theme/theme.ts#L145-L218) object would be accessed by directly importing the `theme/theme.ts` file. This is no longer the case as, from now on, the object should be [accessed via React context](https://emotion.sh/docs/theming). 
+
+For example, if in your Webiny project you had something like the following:
+
+```tsx
+import theme from "../../theme";
+
+const Heading = styled.div(theme.styles.typography["heading1"]);
+```
+
+With the new version, the following changes should be made:
+
+```diff-tsx
+// No need for the import anymore.
+- import theme from "../../theme";
+
+// The theme object is now accessed via the context object.
+- const Heading = styled.div(theme.styles.typography["heading1"]);
++ const Heading = styled.div(({ theme }) => theme.styles.typography["heading1"]);
+```
+
+Note that the upgrade command will try to detect legacy usages of the `theme` object and will try to adjust them automatically. However, if you have custom code that uses the `theme` object, you might need to make the necessary adjustments manually. You will notice this as, upon running the [`webiny watch`](/docs/{version}/core-development-concepts/basics/watch-command)  command against the Admin or the Website application, errors will be reported.
+
+#### Form Layot Upgraded completely
+
+### Other
+
+#### Warning: We couldn't map your custom key KEY_NAME to the new structure, please migrate manually.
+
+If you're seeing **We Couldn't Map Your Custom Key {KEY_NAME} to the New Structure, Please Migrate manually.** warning,
